<resources>
    <string name="app_name">Neuro ID POC</string>
    <string name="nid_app_demo_user_id">User ID:</string>
    <string name="nid_app_demo_client_id">Client ID:</string>
    <string name="nid_app_demo_score">Score:</string>
    <string name="nid_app_demo_subtitle_welcome">Welcome!! You\'re one step away from checking your loan options. $</string>
    <string name="nid_app_demo_subtitle_description">Checking your loan options does not affect your credit score.</string>
    <string name="nid_app_demo_first_name">First Name</string>
    <string name="nid_app_demo_last_name">Last Name</string>
    <string name="nid_app_demo_date_birth">Date of Birth:</string>

    <string-array name="nid_app_array_years">
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
    </string-array>

    <string-array name="nid_app_array_months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="nid_app_demo_select_an_item">Select an item</string>
    <string name="nid_app_demo_email">Email</string>
    <string name="nid_app_demo_home_city">Home City</string>
    <string name="nid_app_demo_home_zip_code">Home Zip Code</string>
    <string name="nid_app_demo_phone_number">Phone Number</string>
    <string name="nid_app_demo_employer">Employer</string>
    <string name="nid_app_demo_employer_address">Employer Address</string>
    <string name="nid_app_demo_employer_phone_number">Employer Phone Number</string>
    <string name="nid_app_demo_continue">Continue</string>
    <string name="nid_app_demo_reset">Reset Application</string>
    <string name="nid_app_close_session">Close Session</string>

    <string name="nid_app_demo_employer_age_work">Age at work (years)</string>
    <string name="nid_app_demo_own_house">Own house?</string>
    <string name="nid_app_demo_yes_option">Yes</string>
    <string name="nid_app_demo_no_option">No</string>
    <string name="nid_app_demo_have_a_car">Do you have a car?</string>
    <string name="nid_app_demo_marital_status">Marital status</string>
    <string name="nid_app_demo_marital_status_single">Single</string>
    <string name="nid_app_demo_marital_status_married">Married</string>
    <string name="nid_app_demo_number_dependents">Number of economic dependents</string>

    <string name="nid_app_demo_agree_and_check">Agree and Check Tour Loan Options</string>
    <string name="nid_app_demo_agree_and_check_description">Checking your loan options does not affect your credit score.</string>
</resources>