<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:clickable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UselessLeaf" />

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:contentDescription="@null"
            android:src="@drawable/nid_neuro_id_icon_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="14dp"
            android:src="@drawable/nid_ic_back"
            android:backgroundTint="@android:color/white"
            app:layout_constraintTop_toTopOf="@id/imageViewLogo"
            app:layout_constraintBottom_toBottomOf="@id/imageViewLogo"
            app:layout_constraintStart_toStartOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonAgreeAndCheck">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="14dp">

                    <TextView
                        android:id="@+id/textViewDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/nid_app_demo_subtitle_description"
                        android:textSize="16sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textLayoutAgeWork"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        app:layout_constraintTop_toBottomOf="@id/textViewDescription"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextAgeWork"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:inputType="numberDecimal"
                            android:maxLength="4"
                            android:imeOptions="actionDone"
                            android:paddingBottom="8dp"
                            android:hint="@string/nid_app_demo_employer_age_work"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textViewOwnHouse"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/nid_app_demo_own_house"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/textLayoutAgeWork"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <RadioGroup
                        android:id="@+id/radioGroupOwnHouse"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/textViewOwnHouse"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <RadioButton
                            android:id="@+id/radioOwnHouseYes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nid_app_demo_yes_option" />

                        <RadioButton
                            android:id="@+id/radioOwnHouseNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/nid_app_demo_no_option" />

                    </RadioGroup>

                    <TextView
                        android:id="@+id/textViewHaveACar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/nid_app_demo_have_a_car"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/radioGroupOwnHouse"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <RadioGroup
                        android:id="@+id/radioGroupHaveACar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/textViewHaveACar"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <RadioButton
                            android:id="@+id/radioHaveACarYes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nid_app_demo_yes_option" />

                        <RadioButton
                            android:id="@+id/radioHaveACarNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/nid_app_demo_no_option" />

                    </RadioGroup>

                    <TextView
                        android:id="@+id/textViewMaritalStatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/nid_app_demo_marital_status"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/radioGroupHaveACar"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <RadioGroup
                        android:id="@+id/radioGroupMaritalStatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/textViewMaritalStatus"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <RadioButton
                            android:id="@+id/radioSingle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nid_app_demo_marital_status_single" />

                        <RadioButton
                            android:id="@+id/radioMarried"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/nid_app_demo_marital_status_married" />

                    </RadioGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textLayoutNumberDependents"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@id/radioGroupMaritalStatus"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextNumberDependents"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:imeOptions="actionDone"
                            android:paddingBottom="8dp"
                            android:inputType="number"
                            android:maxLength="2"
                            android:hint="@string/nid_app_demo_number_dependents"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/buttonAgreeAndCheck"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="20dp"
            android:text="@string/nid_app_demo_agree_and_check"
            android:textAllCaps="false"
            android:backgroundTint="#3579F7"
            app:layout_constraintBottom_toTopOf="@id/textViewAgreeAndCheck"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textViewAgreeAndCheck"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="20dp"
            android:text="@string/nid_app_demo_agree_and_check_description"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>